Fixed breaking CSS line using a webkit value that was misbehaving on iPhone; fixed URLs pointing to projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -10118,7 +10118,6 @@ section.resume-section {
 }
 section.resume-section .resume-section-content {
   width: 100%;
-  height: -webkit-fill-available;
 }
 
 @media (min-width: 768px) {
